--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sunny Luthra - Traveller - Free Thinker - Blah Blah</title>
+  <title>Daniel Anderson - Traveller - Free Thinker - Blah Blah</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
@@ -39,10 +39,10 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Sunny Luthra
+                    Daniel Anderson
                 </h2>
                 <h4>
-                    Animator / Photographer
+                    Student / Web Developer
                 </h4>
             </div>
         </header>
@@ -71,11 +71,11 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Daniel Anderson">
                             </div>
                             <div class="info">
                                 <h2>
-                                    Sunny Luthra
+                                    Daniel Anderson
                                 </h2>
                                 <h4>
                                     Animator / Photographer
