--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 <!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <div>
+      <h1>Countdown to Katie!</h1>
+      <div id="timer"></div>
+    </div>
+  </body>
+  <script type="text/javascript">
+    let output = document.getElementById('timer');
+    function updateClock(){
+      let time = new Date();
+      let day = time.getDays();
+      let hour = time.getHours();
+      let min = time.getMinutes();
+      output.innerHTML = "test";
+    }
+  </script>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -389,3 +413,4 @@
 
 </body>
 </html>
+ -->
