--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
+<!--<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Daniel Anderson</title>
@@ -52,15 +52,15 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
       <![endif]-->
-</head>
+<!--</head>
   <body class="bg-fixed bg-1">
 <!--[if lt IE 7]>
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
-   <div class="main-container">
+   <!--<div class="main-container">
     <div class="main wrapper clearfix">
       <!-- Header Start -->
-        <header id="header">
+        <!--<header id="header">
             <div id="logo">
                 <h2>
                     Daniel Anderson
@@ -72,9 +72,9 @@
         </header>
         <!-- Header End -->
         <!-- Main Tab Container -->
-        <div id="tab-container" class="tab-container">
+        <!--<div id="tab-container" class="tab-container">
           <!-- Tab List -->
-            <ul class='etabs'>
+            <!--<ul class='etabs'>
                 <li class='tab' id="tab-about">
                   <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
                 </li>
@@ -89,9 +89,9 @@
                 </li>
             </ul>
           <!-- End Tab List -->
-            <div id="tab-data-wrap">
+            <!--<div id="tab-data-wrap">
               <!-- About Tab Data -->
-                <div id="about">
+                <!--<div id="about">
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
@@ -158,10 +158,10 @@
                           </div>
                         </div>
                     </section><!-- content -->
-                </div>
+                <!--</div>
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
-                <div id="resume">
+                <!--<div id="resume">
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
@@ -290,7 +290,7 @@
                 </div>
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
-                <div id="portfolio">
+                <!--<div id="portfolio">
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
@@ -358,7 +358,7 @@
                 </div>
               <!-- End Portfolio Data -->
               <!-- Contact Tab Data -->
-                <div id="contact">
+                <!--<div id="contact">
                     <section class="clearfix">
                        <div class="g1">
                          <div class="sny-icon-box">
@@ -398,19 +398,19 @@
                     </section>
                 </div>
               <!-- End Contact Data -->
-            </div>
+            <!--</div>
         </div>
         <!-- End Tab Container -->
-        <footer>
+        <!--<footer>
             <p>
                 Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
             </p>
         </footer>
     </div><!-- #main -->
-</div><!-- #main-container -->
+<!--</div><!-- #main-container -->
 
 
 
-</body>
+<!--</body>
 </html>
  -->
