--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       let min = time.getMinutes();
       output.innerHTML = "test";
     }
+    
+    setTimeout(updateClock, 1000);
   </script>
 </html>
 
