--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   + minutes + "m " + seconds + "s ";;
     }
     
-    setTimeout(updateClock, 1000);
+    let x = setInterval(updateClock, 1000);
   </script>
 </html>
 
